# simple-cloud-analyzer

./: README.md  pyproject.toml  report.csv.exemple
.github/workflows/: release.yml
docs/: CNAME  index.html
docs/css/: style.css
src/: CONSTS.py  main.py
src/modules/cli/: __init__.py
src/modules/cli/arg_parser/: __init__.py
src/modules/cli/table_generator/: __init__.py
src/modules/clouds/aws/: __init__.py
src/modules/clouds/gcp/: __init__.py  gcp
src/modules/clouds/provider/: __init__.py
src/modules/report_generator/: __init__.py
src/modules/utils/: __init__.py
website/: index.html
