[project]
name = "sca"
version = "0.1.0"
description = ""
authors = [
    {name = "douglas.guimaraes.2120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.38.39,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
